--- a/templates/index.html
+++ b/templates/index.html
@@ -5,76 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Martin Kupec, timechip.cz">
-    <title></title>
-
+    <title>Vianoce z krabičky</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/checkout/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="static/css/custom.css" rel="stylesheet">
+    <link href="static/css/form-validation.css" rel="stylesheet">
 
-
-
-    
-    
-    <link href="form-validation.css" rel="stylesheet">
   </head>
   
-  
   <body class="bg-light">
-    
-<div class="container" style="padding-top: 30px;">
+  <div class="container">
   <main>
-
-
-
+  
     <div class="row g-3">
       <div class="col-md-12 col-lg-12">
         
         
-        <form class="needs-validation" novalidate>
+        <form method="POST" id="formCustomer" enctype="multipart/form-data" class="needs-validation" novalidate>
           
           <div class="row g-3">
 
             <div class="col-12">
-              <label for="" class="form-label">Dievča / Chalan</label>
+              <label for="pohlavi" class="form-label">Dievča / Chalan</label>
               <select class="form-select" id="pohlavi" name="pohlavi" required>
                 <option value="" selected disabled></option>
                 <option value="Z">Dievča</option>
                 <option value="M">Chalan</option>
               </select>
+              <div class="invalid-feedback">Je potřeba uvést pohlaví</div>
             </div>
 
             <div id="roky"></div>
 
             <div class="col-12">
               <label for="firstName" class="form-label">First name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid first name is required.
-              </div>
+              <input type="text" class="form-control" id="firstName" name="firstname" placeholder="" value="Jajovič" required>
+              <div class="invalid-feedback">Valid first name is required.</div>
             </div>
 
             <div class="col-12">
               <label for="lastName" class="form-label">Last name</label>
               <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
+              <div class="invalid-feedback">Valid last name is required.</div>
             </div>
 
 
             <div class="col-12">
               <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com">
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
+              <input type="email" class="form-control" id="email" name="email" placeholder="ty@tvojemail.sk">
+              <div class="invalid-feedback">Please enter a valid email address for shipping updates.</div>
             </div>
 
             <div class="col-12">
               <label for="" class="form-label">Ulice + č.p.</label>
               <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-              <div class="invalid-feedback">
-                Please enter your shipping address.
-              </div>
+              <div class="invalid-feedback">Please enter your shipping address.</div>
             </div>
 
             <div class="col-12">
@@ -85,9 +70,7 @@
             <div class="col-12">
                 <label for="zip" class="form-label">PSČ</label>
                 <input type="text" class="form-control" id="zip" placeholder="" required>
-                <div class="invalid-feedback">
-                  Zip code required.
-                </div>
+                <div class="invalid-feedback">Zip code required.</div>
               </div>
 
             <div class="col-12">
@@ -111,8 +94,8 @@
 </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="./static/js/default.js"></script>
-      <script src="form-validation.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="static/js/custom.js"></script>
+    <script src="static/js/form-validatio.js"></script>
   </body>
 </html>
