--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,12 @@
     <title>Vianoce z krabičky</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/checkout/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="static/css/custom.css" rel="stylesheet">
-    <link href="static/css/form-validation.css" rel="stylesheet">
-
+    <style>
+      .container{
+        padding-top:30px;
+        max-width: 960px;
+      }
+    </style>
   </head>
   
   <body class="bg-light">
@@ -95,7 +98,66 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="static/js/custom.js"></script>
-    <script src="static/js/form-validation.js"></script>
+    <script>
+      $(function(){
+        $('select#pohlavi').change(function(){
+            var pohlavi = $(this).add("option:selected").val();
+            $.getJSON(location.href+'api/vypis-roku/'+pohlavi,function(xhr){
+                console.log(xhr)
+                var str = '<div class="col-12"><label for="rocnik" class="form-label">Rok narodenia</label><select class="form-select" id="rocnik" name="rocnik" required><option value="" selected disabled></option>';
+                for(var i=0;i < xhr.length;i++){
+                    str += '<option value="'+xhr[i]+'">'+xhr[i]+'</option>';
+                }
+                str += '</select><div class="invalid-feedback">Je potřeba uvést rok narození</div></div>';
+                $("#roky").html(str);
+            });
+            return false;
+        });
+
+        $('#formCustomer').click(function(){
+            const data =  new FormData($('#formCustomer')[0]);
+            $.ajax({
+                method: 'post',
+                processData: false,
+                contentType: false,
+                cache: false,
+                data: data,
+                enctype: 'multipart/form-data',
+                url: location.href+'api/test',
+                //dataType: "json",
+                success : function(data){
+                    console.log("ahoj")
+
+            
+                }
+          }); 
+        return false;
+        
+      })
+  });
+</script>
+<script>
+  // Example starter JavaScript for disabling form submissions if there are invalid fields
+  (function () {
+      'use strict'
+    
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      var forms = document.querySelectorAll('.needs-validation')
+    
+      // Loop over them and prevent submission
+      Array.prototype.slice.call(forms)
+        .forEach(function (form) {
+          form.addEventListener('submit', function (event) {
+            if (!form.checkValidity()) {
+              event.preventDefault()
+              event.stopPropagation()
+            }
+    
+            form.classList.add('was-validated')
+          }, false)
+        })
+    })()
+</script>
+  
   </body>
 </html>
