--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,4 @@
-<!doctype html>
-<html lang="cs">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Martin Kupec, timechip.cz">
-    <title>Vianoce z krabičky</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/checkout/">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="static/css/custom.css" rel="stylesheet">
-    <link href="static/css/form-validation.css" rel="stylesheet">
-
-  </head>
-  
-  <body class="bg-light">
-  <div class="container">
-  <main>
-  
+{{template "header"}}
     <div class="row g-3">
       <div class="col-md-12 col-lg-12">
         
@@ -45,7 +27,7 @@
 
             <div class="col-12">
               <label for="lastName" class="form-label">Last name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+              <input type="text" class="form-control" id="lastName" name="lastname"  placeholder="" value="" required>
               <div class="invalid-feedback">Valid last name is required.</div>
             </div>
 
@@ -58,25 +40,25 @@
 
             <div class="col-12">
               <label for="" class="form-label">Ulice + č.p.</label>
-              <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+              <input type="text" class="form-control" id="address" name="address" placeholder="1234 Main St" required>
               <div class="invalid-feedback">Please enter your shipping address.</div>
             </div>
 
             <div class="col-12">
               <label for="address2" class="form-label">Mesto/Obec</label>
-              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+              <input type="text" class="form-control" id="address2"  name="obec" placeholder="Město nebo obec" required>
             </div>
 
             <div class="col-12">
                 <label for="zip" class="form-label">PSČ</label>
-                <input type="text" class="form-control" id="zip" placeholder="" required>
+                <input type="text" class="form-control" id="zip"  name="zip" placeholder="" required>
                 <div class="invalid-feedback">Zip code required.</div>
               </div>
 
             <div class="col-12">
               <label for="country" class="form-label">Country</label>
-              <select class="form-select" id="country" disabled>
-                <option>Slovenská republika</option>
+              <select class="form-select" id="country" name="country">
+                <option value="SVK">Slovenská republika</option>
               </select>
             </div>
 
@@ -89,13 +71,4 @@
         </form>
       </div>
     </div>
-  </main>
-
-</div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="static/js/custom.js"></script>
-    <script src="static/js/form-validation.js"></script>
-  </body>
-</html>
+{{template "footer"}}
